Temporary push trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: "Wordfence CLI build"
 
 on:
-  #push: 
-  #  tags:
-  #    - "v*.*.*"
+  push: 
   # Allows running the workflow manually
   workflow_dispatch:
     inputs:
