Remove temporary trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,9 @@
 name: "Wordfence CLI build"
 
 on:
-  push: 
+  #push: 
+  #  tags:
+  #    - "v*.*.*"
   # Allows running the workflow manually
   workflow_dispatch:
     inputs:
