--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         include:
           - arch: amd64
-          - arch: arm64
+          #- arch: arm64
     steps:
       - uses: actions/checkout@v3
       - name: Docker build
