--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,13 @@ jobs:
       matrix:
         include:
           - arch: amd64
-          #- arch: arm64
+          - arch: arm64
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      # Set up QEMU to support additional platforms
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Docker build
         run: |
           docker build \
