Match versions in setup.py and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 regex >= 2023.6.3
-packaging >= 23
-requests >= 2.3
+packaging ~= 23
+requests ~= 2.3
 setuptools ~= 68.0.0
 wheel ~= 0.41.1
 build ~= 0.10.0
