--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+# Runtime dependencies
 regex >= 2023.6.3
 packaging ~= 23
 requests ~= 2.3
+# Build requirements
 setuptools ~= 68.0.0
 wheel ~= 0.41.1
 build ~= 0.10.0
+# Helpful development tools
 pyinstaller ~= 5.13.0
