--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,10 @@ dependencies = [
     "packaging~=23.1",
     "requests~=2.3"
 ]
-dynamic = [
-    "version"
-]
+dynamic = [ "version" ]
+
+[tool.setuptools]
+packages = [ "wordfence" ]
 
 [tool.setuptools.dynamic]
 version = { attr = "wordfence.version.__version__" }
