Remove unnecessary build requirements, see https://setuptools.pypa.io/en/latest/userguide/quickstart.html#basic-use

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,6 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = [
-    "setuptools~=68.0.0",
-    "wheel~=0.41.1",
-    "build~=0.10.0"
-]
+requires = [ "setuptools~=68.0.0" ]
 
 [project]
 name = "wordfence"
