Make runtime dependencies less strict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ classifiers = [
 ]
 dependencies = [
     "regex>=2023.6.3",
-    "packaging~=23.1",
-    "requests~=2.3"
+    "packaging>=23.1",
+    "requests>=2.3"
 ]
 dynamic = [ "version" ]
 
