--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Runtime dependencies
 regex >= 2023.6.3
-packaging ~= 23.1
-requests ~= 2.3
+packaging >= 23.1
+requests >= 2.3
 # Build requirements
 build ~= 0.10
 setuptools ~= 68.0.0
