Hardcode repo username to avoid masking

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,20 +39,20 @@ jobs:
         run: |
           pip install twine~=4.0.2
           if [ "${{ github.event.inputs.pypi_repository }}" = "pypi" ]; then
-            TWINE_USERNAME="${{ secrets.PYPI_TWINE_USERNAME }}"
+            TWINE_USERNAME="__token__"
             TWINE_PASSWORD="${{ secrets.PYPI_TWINE_PASSWORD }}"
             TWINE_REPOSITORY_URL="${{ secrets.PYPI_TWINE_REPOSITORY_URL }}"
           elif [ "${{ github.event.inputs.pypi_repository }}" = "testpypi" ]; then
-            TWINE_USERNAME="${{ secrets.TEST_PYPI_TWINE_USERNAME }}"
+            TWINE_USERNAME="__token__"
             TWINE_PASSWORD="${{ secrets.TEST_PYPI_TWINE_PASSWORD }}"
             TWINE_REPOSITORY_URL="${{ secrets.TEST_PYPI_TWINE_REPOSITORY_URL }}"
           elif [ "${{ github.event.inputs.pypi_repository }}" = "testwf" ]; then
-            TWINE_USERNAME="${{ secrets.TEST_WF_TWINE_USERNAME }}"
+            TWINE_USERNAME="wordfence"
             TWINE_PASSWORD="${{ secrets.TEST_WF_TWINE_PASSWORD }}"
             TWINE_REPOSITORY_URL="${{ secrets.TEST_WF_TWINE_REPOSITORY_URL }}"
           fi
-          # Mask repo URL
           python -m twine \
             upload \
             --non-interactive \
-            wordfence_cli_python/*.whl wordfence_cli_python/*.tar.gz > /dev/null 2>&1
+            wordfence_cli_python/*.whl \
+            wordfence_cli_python/*.tar.gz
