Add optional git ref input to build workflow, add GH release to release workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,11 @@ on:
   # Allows running the workflow manually
   workflow_dispatch:
     inputs:
+      git_ref:
+        type: string
+        description: Git ref to build code from
+        required: true
+        default: main
 
 jobs:
   linux_standalone_build:
@@ -20,6 +25,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.git_ref }}
       # Set up QEMU to support additional platforms
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -55,8 +62,8 @@ jobs:
           name: wordfence_cli_${{ matrix.arch }}
           path: |
             ${{ github.workspace }}/docker/build/volumes/output/wordfence_*.tar.gz
-            ${{ github.workspace }}/docker/build/volumes/output/wordfence_*.tar.gz.asc
             ${{ github.workspace }}/docker/build/volumes/output/wordfence_*.tar.gz.sha256
+            ${{ github.workspace }}/docker/build/volumes/output/wordfence_*.tar.gz.asc
             ${{ github.workspace }}/docker/build/volumes/output/wordfence_*.tar.gz.sha256.asc
   python_build:
     name: Python build
@@ -64,6 +71,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.git_ref }}
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
