--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,10 @@ on:
         type: boolean
         description: Whether to draft a GitHub release
         default: true
+      release_tag:
+        type: string
+        description: The tag to create a release for (e.g., v1.0.0); will be created if it doesn't exist
+        required: true
 
 jobs:
   pypi_release:
@@ -56,3 +60,43 @@ jobs:
             --non-interactive \
             wordfence_cli_python/*.whl \
             wordfence_cli_python/*.tar.gz
+  github_release:
+    if: ${{ inputs.release_github }}
+    name: GitHub release
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Download artifact
+        uses: dawidd6/action-download-artifact@v2.27.0
+        with:
+          workflow: build.yml
+          run_number: ${{ inputs.build_run_number }}
+      - name: Get commit hash from build
+        id: get-commit-hash
+        run: |
+          printf "Getting commit hash for build number %s\\n" "$BUILD_RUN_NUMBER"
+          BUILD_COMMIT_HASH=$(
+            gh run list \
+              --workflow build.yml \
+              --json headBranch,headSha,number | jq -r '.[] | select(.number=="$BUILD_RUN_NUMBER") | .headSha'
+          )
+          echo "BUILD_COMMIT_HASH=${BUILD_COMMIT_HASH}" >> "$GITHUB_OUTPUT"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BUILD_RUN_NUMBER: ${{ inputs.build_run_number }}
+      - name: Create draft release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            wordfence_cli_python/*.tar.gz \
+            wordfence_cli_python/*.whl \
+            wordfence_cli_python/*.sha256 \
+            wordfence_cli_python/*.asc \
+            wordfence_cli_amd64/*.tar.gz \
+            wordfence_cli_amd64/*.sha256 \
+            wordfence_cli_amd64/*.asc \
+            wordfence_cli_arm64/*.tar.gz \
+            wordfence_cli_arm64/*.sha256 \
+            wordfence_cli_arm64/*.asc \
+          target_commitish: steps.get-commit-hash.outputs.BUILD_COMMIT_HASH
+          tag_name: inputs.release_tag
+          draft: true
