--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,6 +90,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BUILD_RUN_NUMBER: ${{ inputs.build_run_number }}
+      - name: Check if release for tag already exists
+        run: |
+          if gh release view "$RELEASE_TAG"; then
+            printf "Release for tag %s already exists\\n" "$RELEASE_TAG"
+            exit 1
+          else
+            exit 0
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_TAG: ${{ inputs.release_tag }}
       - name: Create draft release
         uses: softprops/action-gh-release@v1
         with:
