--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
           BUILD_RUN_NUMBER: ${{ inputs.build_run_number }}
       - name: Check if release for tag already exists
         run: |
-          RELEASE=$(gh release view "$RELEASE_TAG" --repo "$GITHUB_ACTION_REPOSITORY" --json id,name,tagName)
+          RELEASE=$(gh release view "$RELEASE_TAG" --repo "$GITHUB_REPOSITORY" --json id,name,tagName)
           if [ ! -z "$RELEASE" ]; then
             printf "Release for tag %s already exists: %s\\n" "$RELEASE_TAG" "$RELEASE"
             exit 1
