Adjusted flake8 install command for code style validation action

--- a/.github/workflows/validate-code-styles.yml
+++ b/.github/workflows/validate-code-styles.yml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - run: apt-get install flake8
+      - run: sudo apt-get install -y flake8
       - run: flake8
