--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.8'
+      - name: Transform readme
+        run: ./scripts/transform-readme.py README.py ${{ github.server_url }}/${{ github.repository }}/blob/${{ github.refname }}/
       - name: Python build
         run: |
           pip install build~=0.10
