--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = [ "setuptools~=68.0.0" ]
+requires = [ "setuptools>=65" ]
 
 [project]
 name = "wordfence"
