--- a/.github/workflows/validate-code-styles.yml
+++ b/.github/workflows/validate-code-styles.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: sudo apt-get install -y flake8 python3-pip
-      - run: pip3 install flake8-bugbear
+      - run: pip3 install flake8-bugbear attrs
       - run: flake8 --require-plugins pycodestyle,flake8-bugbear
