--- a/.github/workflows/validate-code-styles.yml
+++ b/.github/workflows/validate-code-styles.yml
@@ -5,6 +5,6 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: sudo apt-get install -y flake8 python3-pip
-      - run: pip3 install flake8-bugbear attrs
+      - run: sudo apt-get update && sudo apt-get install -y python3-pip
+      - run: pip3 install flake8 flake8-bugbear
       - run: flake8 --require-plugins pycodestyle,flake8-bugbear
