--- a/.github/workflows/validate-code-styles.yml
+++ b/.github/workflows/validate-code-styles.yml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: sudo apt-get update && sudo apt-get install -y python3-full
-      - run: python3 -m venv ./python-venv
-      - run: ./python-venv/bin/pip install flake8 flake8-bugbear
-      - run: ./python-venv/bin/python -m flake8 --exclude python-venv --require-plugins pycodestyle,flake8-bugbear
+      - run: python3 -m venv ./venv
+      - run: ./venv/bin/pip install flake8 flake8-bugbear
+      - run: ./venv/bin/python -m flake8 --exclude venv --require-plugins pycodestyle,flake8-bugbear
