--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 dependencies = [
     "packaging>=21.0",
     "requests>=2.3",
-	"mysql-connector-python>=8.0"
+	"mysqlclient>=1.4"
 ]
 dynamic = [ "version" ]
 
