--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 dependencies = [
     "packaging>=21.0",
     "requests>=2.3",
-	"mysqlclient>=1.4"
+	"pymysql>=0.9.3"
 ]
 dynamic = [ "version" ]
 
