--- a/.github/workflows/unit-testing.yml
+++ b/.github/workflows/unit-testing.yml
@@ -5,5 +5,5 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-      - run: sudo apt-get update && sudo apt-get install -y python3-mysqldb python3-requests
+      - run: sudo apt-get update && sudo apt-get install -y python3-pymysql python3-requests
       - run: python3 -m unittest
